content/nomad/v1.1.x/content/docs/job-specification/sidecar_service.mdx
---
layout: docs
page_title: sidecar_service Stanza - Job Specification
description: |-
  The "sidecar_service" stanza allows specifying options for configuring
  sidecar proxies used in Consul Connect integration
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-10T11:41:43-05:00
last_modified: 2025-10-10T11:41:43-05:00
# END AUTO GENERATED METADATA
---

# `sidecar_service` Stanza

<Placement groups={['job', 'group', 'service', 'connect', 'sidecar_service']} />

The `sidecar_service` stanza allows configuring various options for the sidecar
proxy managed by Nomad for [Consul
Connect](/docs/integrations/consul-connect) integration. It is
valid only within the context of a connect stanza.

```hcl
job "countdash" {
  datacenters = ["dc1"]

  group "api" {
    network {
      mode = "bridge"
    }

    service {
      name = "count-api"
      port = "9001"

      connect {
        sidecar_service {}
      }
    }

    task "web" {
      driver = "docker"

      config {
        image = "hashicorpdev/counter-api:v3"
      }
    }
  }
}
```

## `sidecar_service` Parameters

- `disable_default_tcp_check` `(bool: false)` - disable the default TCP health
  check.

- `port` `(string: )` - Port label for sidecar service.

- `proxy` <code>([proxy][]: nil)</code> - This is used to configure the
  sidecar proxy service.

- `tags` <code>(array&lt;string&gt;: nil)</code> - Custom Consul service tags
  for the sidecar service.

## `sidecar_service` Examples

The following example is a minimal `sidecar_service` stanza with defaults

```hcl
  connect {
    sidecar_service {}
  }
```

The following example includes specifying upstreams.

```hcl
   sidecar_service {
     proxy {
       upstreams {
         destination_name = "count-api"
         local_bind_port = 8080
       }
     }
   }

```

[job]: /docs/job-specification/job 'Nomad job Job Specification'
[group]: /docs/job-specification/group 'Nomad group Job Specification'
[task]: /docs/job-specification/task 'Nomad task Job Specification'
[interpolation]: /docs/runtime/interpolation 'Nomad interpolation'
[sidecar_service]: /docs/job-specification/sidecar_service 'Nomad sidecar service Specification'
[proxy]: /docs/job-specification/proxy 'Nomad sidecar proxy config Specification'
